Poslední korektura před odesláním docentce

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 *.db
 /Zdroje/citace.ris
 /Zdroje/clanky/ijbh2014-2.pdf
+/Diplomova prace Milan Polacek k Editaci.zip
+/Diplomova_prace_Polacek_Milan_2016_05_18.zip
+/konečná.pdf
