Přidány úpravy podle Albertova

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /Diplomova prace Milan Polacek k Editaci.zip
 /Diplomova_prace_Polacek_Milan_2016_05_18.zip
 /konečná.pdf
+/Diplomova_prace_Polacek_AlbEdit.pdf
+/~$plomová práce_prace_Polacek.docx
