úpravy podle aleše

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /Diplomova_prace_Polacek_AlbEdit.pdf
 /~$plomová práce_prace_Polacek.docx
 /Diplomova_prace_Polacek_UvodEdit.pdf
+/Diplomová práce_prace_Polacek_vidiAP v2.docx
+/konečná - Míla.docx
