Úprava co byste

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 /Diplomova_prace_Polacek_UvodEdit.pdf
 /Diplomová práce_prace_Polacek_vidiAP v2.docx
 /konečná - Míla.docx
+/editace ostatních/Diplomova_prace_Polacek_AlbEdit.pdf
+/editace ostatních/Diplomova_prace_Polacek_UvodEdit.pdf
+/editace ostatních/Diplomová práce_prace_Polacek_vidiAP v2.docx
+/editace ostatních/konečná - Míla.docx
+/editace ostatních/konečná.pdf
